# job-board

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.ci.yml
.github/workflows/: main.yml
backend/: .dockerignore  .flake8  Dockerfile  Makefile  docker-compose.ci.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml
backend/apis/: base.py  utils.py
backend/apis/version1/: route_general_pages.py  route_jobs.py  route_login.py  route_users.py
backend/core/: config.py
backend/db/: session.py
backend/db/models/: __init__.py  jobs.py  users.py
backend/db/repository/: jobs.py  users.py
backend/templates/components/: cards.html  navbar.html
backend/templates/general_pages/: homepage.html
backend/templates/jobs/: detail.html
backend/templates/shared/: base.html
backend/tests/: conftest.py
backend/tests/test_routes/: test_job.py  test_users.py
backend/tests/utils/: users.py
backend/webapps/: base.py
backend/webapps/auth/: route_login.py
backend/webapps/jobs/: forms.py  route_jobs.py
backend/webapps/users/: forms.py  route_users.py
