[tool.poetry]
name = "job-board"
version = "0.1.0"
description = "Job board written with FastAPI"
authors = ["Roman Baksheev <rombaks.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "job_board"}]

[tool.poetry.dependencies]
python = "^3.10"
isort = "5.11.4"
anyio = "3.6.2"
black = "22.12.0"
click = "8.1.3"
fastapi = "0.89.1"
h11 = "0.14.0"
idna = "3.4"
mypy-extensions = "0.4.3"
pathspec = "0.10.3"
platformdirs = "2.6.2"
pydantic = "1.10.4"
sniffio = "1.3.0"
starlette = "0.22.0"
tomli = "2.0.1"
typing-extensions = "4.4.0"
uvicorn = "0.20.0"
attrs = "22.2.0"
cachecontrol = "0.12.11"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
cleo = "2.0.1"
crashtest = "0.4.1"
cryptography = "39.0.0"
distlib = "0.3.6"
dulwich = "0.20.50"
filelock = "3.9.0"
html5lib = "1.1"
importlib-metadata = "6.0.0"
jaraco-classes = "3.2.3"
jeepney = "0.8.0"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
more-itertools = "9.0.0"
msgpack = "1.0.4"
packaging = "23.0"
pexpect = "4.8.0"
pkginfo = "1.9.6"
poetry = "1.3.2"
poetry-core = "1.4.0"
poetry-plugin-export = "1.2.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pyrsistent = "0.19.3"
rapidfuzz = "2.13.7"
requests = "2.28.1"
requests-toolbelt = "0.10.1"
secretstorage = "3.3.3"
shellingham = "1.5.0.post1"
six = "1.16.0"
tomlkit = "0.11.6"
trove-classifiers = "2022.12.22"
urllib3 = "1.26.14"
virtualenv = "20.17.1"
webencodings = "0.5.1"
zipp = "3.11.0"
flake8 = "^6.0.0"
mypy = "^0.991"
jinja2 = "^3.1.2"
aiofiles = "^22.1.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^1.4.46"
python-dotenv = "^0.21.0"

[tool.black]
line-length = 80
target-version = ['py310']
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
)
'''

[tool.isort]
line_length = 80
known_third_party = ["alembic", "databases", "dotenv", "fastapi", "jose",
"markdown2", "passlib", "pydantic", "sqlalchemy", "uvicorn"]
multi_line_output = 3
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
